Fixes nav button styling on small and medium devices, makes search a permanent fixture, fixes critter of the month layout.

--- a/app/scss/_appstyles.scss
+++ b/app/scss/_appstyles.scss
@@ -153,7 +153,7 @@ audio {
   @media screen and (min-width: 361px) and (max-width: 800px) {
     font-size: 50px;
     line-height: 60px;
-    margin-top: 13px;
+    margin-top: 20px;
   }
   @media screen and (min-width: 801px) {
     font-size: 50px;
@@ -172,7 +172,7 @@ audio {
     margin-top: 98px;
   }
   @media screen and (min-width: 361px) and (max-width: 800px) {
-    margin-top: 100px;
+    margin-top: 115px;
   }
   @media screen and (min-width: 801px) {
     position: relative;
@@ -232,4 +232,29 @@ p a {
 
 p a:hover {
     border-bottom: 1px solid #4a91d3;
+}
+
+#critterOfTheMonth {
+  a {
+    padding: 0px;
+  }
+  img {
+    height: auto;
+    width: 100%;
+  }
+  div {
+    background-color: #21578A;
+    h2 {
+      color: #fff;
+    }
+    h3 {
+      color: #C2C2C2;
+      a {
+        color: #C2C2C2;
+      }
+    }
+    div {
+      color: #f5f5f5;
+    }
+  }      
 }
